Fix admin form buttons bar on narrow screens

--- a/byceps/static/style/admin.css
+++ b/byceps/static/style/admin.css
@@ -506,13 +506,22 @@ ul.compact {
 /* forms */
 
 .form-buttons {
+  --gutter: 20px;
   background-color: #e8e8e8;
   border-color: #cccccc;
   border-style: solid;
   border-width: 1px 0;
-  margin-left: -40px;
-  margin-right: -40px;
-  padding: 1rem 40px;
+  margin-left: calc(var(--gutter) * -1);
+  margin-right: calc(var(--gutter) * -1);
+  padding: 1rem var(--gutter);
+}
+
+@media (min-width: 36rem) { /* 576px / 16px */
+
+  .form-buttons {
+    --gutter: 40px;
+  }
+
 }
 
 
